<resources>
    <string name="app_name">TraNSit</string>
    <string name="tab_text_1">Rute</string>
    <string name="tab_text_2">Linije</string>
    <string name="tab_text_3">Stanice</string>
    <string name="start_point">Polazište</string>
    <string name="end_point">Odredište</string>
    <string name="search_button">PRETRAŽI</string>
    <string name="close_stops">Stanice u vašoj blizini</string>
    <string name="walk_time">Vreme pešačenja: %1$d minuta</string>
    <string name="lines">Linije</string>
    <string name="last_routes">Poslednje rute</string>
    <string name="favorites">Omiljeno</string>
    <string name="set_location">Zapamti lokaciju</string>
    <!--<string name="home_location">Podesi lokaciju kuće</string>
    <string name="work_location">Podesi lokaciju posla</string>-->
    <string name="settings">Podešavanja</string>
    <string name="rate_us">Ocenite nas</string>
    <string name="about_us">O nama</string>
    <string name="drawer_open">Otvaranje</string>
    <string name="drawer_close">Zatvaranje</string>
    <string name="choose_on_map">Izaberi na mapi</string>
    <string name="choose_current_location">Izaberi trenutnu lokaciju</string>
    <string name="notifications">Notifikacije</string>
    <string name="navigation_notification">Notifikacije za navigaciju</string>
    <string name="navigation_notification_summary">Daje korisniku neophodne informacije u procesu navigacije</string>
    <string name="update_notification">Notifikacije o izlasku nove verzije aplikacije</string>
    <string name="update_notification_summary">Obaveštava korisnika o izlasku nove verzije aplikacije</string>
    <string name="sync">Sinhronizacija</string>
    <string name="sync_preference">Sinhrozacija podataka</string>
    <string name="sync_preference_summary">Dozvoljava aplikaciji da sinhronizije podatke, kad je dostupan internet</string>
    <string name="sync_interval">Interval sinhronizacije</string>
    <string name="sync_interval_summary">Koliko često će se obavljati proces sinhronizacije podataka</string>
    <string name="stations">Stanice</string>
    <string name="stations_radius">Radijus udaljenosti stanica</string>
    <string name="stations_radius_summary">Predstavlja radijus u kojem će se tražiti najbliže stanice u odnosu na lokaciju korisnika</string>
    <string name="about">O aplikaciji</string>
    <string name="app_version">Verzija aplikacije</string>
    <string name="version">1.2.0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="stop_lines_header">Dostupne linije</string>
    <string name="show_timetable">Prikaži red vožnje</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="direction">smer</string>
    <string name="found_routes">Pronađene rute</string>
    <string name="departure_stop">Polazna stanica: %1$s</string>
    <string name="next_departure">Vreme narednog polaska: %1$s</string>
    <string name="total_price">" | Ukupna cena: %1$d"</string>
    <string name="minutes">min</string>
    <string name="timetable_tab1">Radni dan</string>
    <string name="timetable_tab2">Subota</string>
    <string name="timetable_tab3">Nedelja</string>
    <string name="navigation_process">Tok putovanja</string>
    <string name="stop_time">%1$s min</string>
    <string name="start">od</string>
    <string name="end">do</string>
    <string name="favourites_preference_file_key">org.mad.transit.favourites_key</string>
    <string name="action_remove">Remove all</string>
    <string name="favourite_lines_removed_message">Uspešno ste obrisali sve vaše omiljene linije</string>
    <string name="remove_favourite_lines_dialog_title">Brisanje omiljenih linija</string>
    <string name="remove_favourite_lines_dialog_message">Da li ste sigurni da želite da uklonite sve vaše omiljene linije?</string>
    <string name="favourite_lines_header">Omiljene linije</string>
    <string name="location_search_hint">Unesite adresu ili lokaciju</string>
    <string name="location_not_found_message">Vaša trenutna lokacija nije uspešno pronađena</string>
    <string name="algolia_search_hits_key">hits</string>
    <string name="algolia_search_name_key">locale_names</string>
    <string name="locationNotChosenMessage">Niste odabrali lokaciju!</string>
</resources>
