<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#80FFFFFF"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_sheet_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_height="6dp"
                android:layout_width="40dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="4dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorGray"
                android:lineSpacingExtra="10sp"
                android:gravity="center_horizontal"
                android:text="@string/showTimetable"
                android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorWhite"
                android:lineSpacingExtra="2sp"
                android:gravity="center_horizontal"
                android:text="@string/b"
                android:layout_marginEnd="24.3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/direction_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/B"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorWhite"
                android:lineSpacingExtra="2sp"
                android:gravity="center_horizontal"
                android:text="@string/a"
                android:layout_marginEnd="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/direction_switch"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorGray"
                android:lineSpacingExtra="14sp"
                android:gravity="center_horizontal"
                android:text="@string/direction"
                android:layout_marginEnd="57.7dp"
                app:layout_constraintTop_toBottomOf="@+id/direction_switch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.bskim.maxheightscrollview.widgets.MaxHeightScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:maxHeight="200dp"
        android:background="@color/colorWhite"
        android:scrollbarThumbVertical="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/single_line_bottom_sheet_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.bskim.maxheightscrollview.widgets.MaxHeightScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>